Change background on mobile correctly

--- a/papi/style.css
+++ b/papi/style.css
@@ -7,6 +7,13 @@ body{
   background-position: bottom; 
 }
 
+.bg_mobile{
+    background-image: url("assets/images/7.jpg");
+    background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: bottom; 
+}
 
 .box{
     
